improved styling a little, fixed overflow issues, fixed margins on icons, collums in tables now follow the same sizing (#292)

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -58,8 +58,7 @@ body {
 }
 
 .App {
-  height: 100vh;
-  width: 100vw;
+  min-height: 95vh;
   color: #333;
   background: #fff;
 }
